Fixed side panel container overflow issues

--- a/src/components/SidePanel/SidePanel.module.css
+++ b/src/components/SidePanel/SidePanel.module.css
@@ -32,6 +32,7 @@
   display: flex;
   flex: 1;
   flex-direction: column;
+  overflow: hidden;
   position: relative;
 }
 
